fix dropdown text size on mobile

--- a/css/loop-4/bootstrap-css-project/scss/components/_dropdown.scss
+++ b/css/loop-4/bootstrap-css-project/scss/components/_dropdown.scss
@@ -20,6 +20,7 @@
         box-shadow: 4px 4px 8px rgba($color: #000000, $alpha: .1);
         @media screen and (max-width: 480px) {
             width: 80%;
+            font-size: 1.4rem;
         }
     }
     .dropdown-menu {
@@ -28,6 +29,7 @@
         width: 60%;
         @media screen and (max-width: 480px) {
             width: 80%;
+            font-size: 1.4rem;
         }
     }
 }
